--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-native": "0.74.5"
+    "react-native": "0.74.5",
+    "react-native-purchases": "^8.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
