--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-camera-kit": "^13.0.0",
     "react-native-purchases": "^8.0.1"
   },
   "devDependencies": {
