--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,6 +7,7 @@ buildscript {
         ndkVersion = "26.1.10909125"
         kotlinVersion = "1.9.22"
         googlePlayServicesVersion = "17.0.0"
+        kotlin_version = "1.9.22"
     }
     repositories {
         google()
