--- a/package.json
+++ b/package.json
@@ -10,22 +10,22 @@
     "test": "jest"
   },
   "dependencies": {
-    "axios": "^1.7.3",
+    "dotenv": "^16.4.5",
     "nativewind": "^2.0.11",
+    "postcss": "^8.4.41",
     "react": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-camera-kit": "^13.0.0",
-    "react-native-purchases": "^8.0.1"
+    "react-native-camera-kit": "^13.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@babel/plugin-transform-private-methods": "^7.24.7",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
     "@react-native/babel-preset": "0.74.87",
     "@react-native/eslint-config": "0.74.87",
     "@react-native/metro-config": "0.74.87",
-    "@react-native/typescript-config": "0.74.87",
-    "@types/react": "^18.2.6",
+    "@react-native/typescript-config": "^0.74.87",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
@@ -33,7 +33,7 @@
     "metro-react-native-babel-preset": "^0.77.0",
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
-    "typescript": "5.0.4"
+    "tailwindcss": "3.3.2"
   },
   "engines": {
     "node": ">=18"
