--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^1.7.4",
     "dotenv": "^16.4.5",
     "nativewind": "^2.0.11",
     "postcss": "^8.4.41",
