--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "axios": "^1.7.4",
     "dotenv": "^16.4.5",
     "nativewind": "^2.0.11",
