--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.4",
     "dotenv": "^16.4.5",
     "nativewind": "^2.0.11",
     "postcss": "^8.4.41",
     "react": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-camera-kit": "^13.0.0"
+    "react-native-camera-kit": "^13.0.0",
+    "react-native-safe-area-context": "^4.10.9",
+    "react-native-screens": "^3.34.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
