--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-camera-kit": "^13.0.0",
+    "react-native-gesture-handler": "^2.18.1",
     "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "^3.34.0"
   },
