--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native-camera-kit": "^13.0.0",
     "react-native-gesture-handler": "^2.18.1",
     "react-native-safe-area-context": "^4.10.9",
-    "react-native-screens": "^3.34.0"
+    "react-native-screens": "^3.34.0",
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
