--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-camera-kit": "^13.0.0",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "^2.18.1",
     "react-native-google-mobile-ads": "^14.2.3",
     "react-native-purchases": "^8.0.1",
     "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "^3.34.0",
+    "react-native-svg": "^15.6.0",
     "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
