--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -126,4 +126,10 @@ dependencies {
     }
 }
 
+project.ext.vectoricons = [
+        iconFontNames: [ 'FontAwesome.ttf', 'FontAwesome5_Regular.ttf',
+             'FontAwesome5_Solid.ttf', 'FontAwesome5_Brands.ttf']
+]
+
+apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
