--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-vector-icons/fontawesome": "^4.7.0-alpha.25",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
@@ -23,6 +24,7 @@
     "react-native": "0.74.5",
     "react-native-camera-kit": "^13.0.0",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.18.1",
     "react-native-google-mobile-ads": "^14.2.3",
     "react-native-purchases": "^8.0.1",
