--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.18.1",
     "react-native-google-mobile-ads": "^14.2.3",
+    "react-native-permissions": "^4.1.5",
     "react-native-purchases": "^8.0.1",
     "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "^3.34.0",
